<resources>
    <string name="app_name">FingerChoice</string>
    <string name="title">Finger\nChoice</string>
    <string name="error_login">로그인 창을 표시할 수 없습니다.</string>
    <string name="error_cancel">취소하였습니다.</string>
    <string name="error_network">네트워크가 연결되어 있지 않습니다.</string>
    <string name="error_unknown">알 수 없는 오류가 발생했습니다.</string>
    <string name="error_token">토큰이 없습니다.</string>
    <string name="error_login_failed">로그인에 실패하였습니다.</string>
    <string name="accept">수락</string>
    <string name="decline">거부</string>
    <string name="supporting_text">거부시, 앱을 이용하지 못할 수도 있습니다. \\n허용하시겠습니까?</string>

    <!--  Navigation  -->
    <string name="label_dest_explore_restaurant">주변 맛집</string>
    <string name="label_dest_map">맛집 지도</string>
    <string name="label_dest_saved_restaurant">나만의 맛집</string>
    <string name="label_dest_profile">내 정보</string>

    <!--  Detail  -->
    <string name="detail_call">전화</string>
    <string name="detail_location">위치</string>
    <string name="detail_save">저장</string>
    <string name="detail_share">공유</string>
    <string name="detail_home">홈</string>
    <string name="detail_menu">메뉴</string>
    <string name="detail_review">리뷰</string>
    <string name="detail_photo">사진</string>
    <string name="detail_image">라벨</string>
    <string name="detail_time">운영시간</string>
    <string name="detail_content">소개</string>
    <string name="detail_write_review">리뷰 작성하기</string>
    <string name="detail_write_menu">메뉴 작성하기</string>

    <!--  WriteReview  -->
    <string name="write_review_save">완료</string>
    <string name="write_review">리뷰 작성</string>
    <string name="write_review_add_photo">사진 추가</string>
    <string name="write_review_taste_bad">별로에요</string>
    <string name="write_review_taste_soso">괜찮아요</string>
    <string name="write_review_taste_good">맛있어요</string>
    <string name="write_review_title">제목</string>
    <string name="write_review_content">내용</string>
    <string name="write_review_private">나만 보기</string>
    <string name="taste_good">Good</string>
    <string name="taste_soso">Soso</string>
    <string name="taste_bad">Bad</string>
    <string name="review_write_save">저장되었습니다.</string>
    <string name="review_write_ok">확인</string>

    <!--  ExploreRestaurant  -->
    <string name="explore_score">별점</string>

    <!--  Saved  -->
    <string name="saved_restaurant_title">나만의 맛집</string>
    <string name="review">리뷰</string>
    <string name="restaurant">식당</string>
</resources>