<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_explore_restaurant"
        android:enabled="true"
        android:icon="@drawable/ic_map"
        android:title="@string/label_dest_explore_restaurant" />
    <item
        android:id="@+id/navigation_map"
        android:enabled="true"
        android:icon="@drawable/ic_location"
        android:title="@string/label_dest_map" />
    <item
        android:id="@+id/navigation_saved_restaurant"
        android:enabled="true"
        android:icon="@drawable/ic_saved"
        android:title="@string/label_dest_saved_restaurant" />
    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/label_dest_profile" />

</menu>