<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailHomeFragment">

    <com.meezzi.fingerchoice.ui.detail.DetailHomeInfoLayout
        android:id="@+id/home_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:detailHomeInfoLabel="@drawable/ic_detail_time"
        app:detailHomeInfoText="@string/detail_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.meezzi.fingerchoice.ui.detail.DetailHomeInfoLayout
        android:id="@+id/home_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:detailHomeInfoLabel="@drawable/ic_detail_location"
        app:detailHomeInfoText="@string/detail_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_time" />

    <com.meezzi.fingerchoice.ui.detail.DetailHomeInfoLayout
        android:id="@+id/home_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:detailHomeInfoLabel="@drawable/ic_detail_content"
        app:detailHomeInfoText="@string/detail_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_location" />

    <com.meezzi.fingerchoice.ui.detail.DetailHomeInfoLayout
        android:id="@+id/home_write_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:detailHomeInfoLabel="@drawable/ic_detail_write_menu"
        app:detailHomeInfoText="@string/detail_write_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_content" />

    <com.meezzi.fingerchoice.ui.detail.DetailHomeInfoLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:detailHomeInfoLabel="@drawable/ic_detail_write_review"
        app:detailHomeInfoText="@string/detail_write_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_write_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>