<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:navGraph="@navigation/home_graph"
    tools:context=".ui.detail.DetailRestaurantFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutMediumStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
            app:layout_collapseMode="pin">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="0dp"
                android:minHeight="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_back_arrow"
                app:subtitle="주소주소"
                app:subtitleCentered="true"
                app:title="왕가네 짬뽕"
                app:titleCentered="true" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerColor="@color/lightGray"
        app:layout_constraintBottom_toTopOf="@+id/detail_list"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />

    <LinearLayout
        android:id="@+id/detail_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <com.meezzi.fingerchoice.ui.detail.DetailRestaurantInfoLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:detailImageInfoLabel="@drawable/ic_call"
            app:detailStringInfoLabel="@string/detail_call" />

        <com.meezzi.fingerchoice.ui.detail.DetailRestaurantInfoLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:detailImageInfoLabel="@drawable/ic_detail_location"
            app:detailStringInfoLabel="@string/detail_location" />

        <com.meezzi.fingerchoice.ui.detail.DetailRestaurantInfoLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:detailImageInfoLabel="@drawable/ic_detail_star"
            app:detailStringInfoLabel="@string/detail_save" />

        <com.meezzi.fingerchoice.ui.detail.DetailRestaurantInfoLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:detailImageInfoLabel="@drawable/ic_share"
            app:detailStringInfoLabel="@string/detail_share" />

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_list"
        app:tabIndicatorColor="@color/orange"
        app:tabIndicatorFullWidth="true">

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/detail_viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>